<?xml version="1.0"?>
<package format="2">
  <name>introspection_msgs</name>
  <version>0.0.0</version>
  <description>A package containing some introspection data related message definitions.</description>
  <maintainer email="ahcorde@erlerobot.org">Alejandro Hernández</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>builtin_interfaces</build_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
